# crm

./: .cursorignore  .gitignore  AGENTS.md  CORRECTIFS_COUPLES.md  DEBUG_IMPORT.md  DIAGNOSTIC_INVESTISSEMENTS.md  ETAT_PROJET_16JAN2026.md  GUIDE_RESOLUTION_PARTENAIRES.md  GUIDE_UTILISATION.md  INSTALLATION_OPENSSL.md  INSTRUCTIONS_DEBUG_IMPORT.md  MODULE_FOYERS_GUIDE.md  PARTENAIRES_RECAP.md  PROCHAIN_MODULE.md  PROMPT_CRM_CGP.md  RAPPORT_IMPLEMENTATION.md  README.md  RESUME_FINAL.md  SOLUTION_DEFINITIVE_0006.md  SOLUTION_SANS_SQLITE.md  apply-and-restart.ps1  apply-etiquettes-migration.cjs  apply-migration-contact-optional.ps1  apply-migration-etiquettes.ps1  apply-migration-filleuls-real.ps1  apply-migration-filleuls.ps1  apply-migration-origine.cjs  apply-migration-origine.ps1  apply-migration-role-foyer.ps1  check-contact.ps1  check-tables.cjs  clean-and-run.ps1  clean-and-start.ps1  clean-duplicates.ps1  clean-orphan-foyers.cjs  clean-orphan-investments.ps1  clean-partenaires.cjs  create-alertes-table.sql  create-investissements-table.sql  create-templates-email.cjs  (+48 more)
.cargo/: config.toml
.cursor/: permissions.json
docs/: CHIFFREMENT.md  EMAIL.md  EMAIL_OAUTH_SETUP.md  ETIQUETTES.md  GUIDE_CONNEXION_GMAIL.md  LICENSE_REGISTRY.md  MISES_A_JOUR.md  MODE_EQUIPE_PILOTE.md  NEWSLETTER.md  NOTES_REGISTRY.md  SCPI_TRIMESTRE.md  SECURITE_AVANT_PUBLIC.md  TESTS.md  TUTORIEL_MODE_EQUIPE_ASSISTANTES.md  UPGRADE_AUDIT.md
drizzle/: 0000_noisy_boomer.sql  0001_volatile_killer_shrike.sql  0002_breezy_gargoyle.sql  0003_add_origine_investissements.sql  0004_add_filleul_categories_and_parrain.sql  (+8 more)
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: atomic_file.rs  automation_toast.rs  backup.rs  backup_sidecar.rs  commands.rs  contact_name.rs  documents_storage.rs  export_archive.rs  main.rs  navigation_guard.rs  secure_files.rs  system_commands.rs  template_email_attachments.rs
src-tauri/src/app_branding/: commands.rs  mod.rs  os.rs
src-tauri/src/app_runtime/: commands.rs  mod.rs  prefs.rs  shutdown.rs  tray.rs  worker.rs
src-tauri/src/auth/: commands.rs  crypto.rs  mod.rs  session.rs
src-tauri/src/birthday_notifications/: commands.rs  message_settings.rs  messages.rs  mod.rs  runner.rs  settings.rs  telegram.rs
src-tauri/src/client_onedrive/: background.rs  commands.rs  drive.rs  hooks.rs  local_sync.rs  matching.rs  mod.rs
src-tauri/src/compta/: calendar.rs  commands.rs  distance.rs  drive.rs  mod.rs
src-tauri/src/database/: alertes.rs  birthdays.rs  calendar_events.rs  client_onedrive.rs  compta.rs  contact_row.rs  contacts.rs  custom_fields.rs  dashboard_stats.rs  documents.rs  email_schedule.rs  email_send_log.rs  ephemeral_email_campaigns.rs  etiquette_actions.rs  etiquette_assignments.rs  etiquette_email.rs  etiquette_fiscal.rs  etiquette_pipeline.rs  etiquette_rule_ast.rs  etiquettes.rs  etiquettes_auto_engine.rs  exchange_history.rs  familles.rs  filleul_dossier.rs  filleul_volumes.rs  filleuls.rs  foyers.rs  google_contact_name_dismissals.rs  interactions.rs  investissement_produit_match.rs  investissements.rs  mod.rs  models.rs  newsletter_ops.rs  notes.rs  notifications_summary.rs  operations.rs  partenaires.rs  pipe.rs  pipe_contact_sync.rs  (+29 more)
src-tauri/src/email/: box_placement.rs  calendar_ops.rs  commands.rs  contact_gmail_sync.rs  contact_outlook_sync.rs  google_api_errors.rs  google_calendar_probe.rs  legacy_cleanup.rs  mod.rs  oauth_client.rs  oauth_commands.rs  oauth_flow.rs  oauth_secrets.rs  oauth_send.rs  oauth_store.rs  response_sync.rs  response_sync_outlook.rs  secret_storage.rs  sender.rs  signature_html.rs  smtp_config.rs  stellium_exceltis.rs
src-tauri/src/email/google_contacts/: index.rs  mod.rs  name_proposals.rs  phone.rs
src-tauri/src/licensing/: commands.rs  gate.rs  keys.rs  mod.rs  registry.rs  registry_sync.rs  state.rs
src-tauri/src/local_api/: commands.rs  config.rs  mod.rs  scpi.rs
src-tauri/src/newsletter/: commands.rs  db.rs  mistral.rs  mod.rs  store.rs
src-tauri/src/notes/: commands.rs  mod.rs  models.rs  registry.rs  service.rs
src-tauri/src/scpi_bulletin/: commands.rs  mistral.rs  mod.rs  nom_produit.rs  pipeline.rs
src-tauri/src/workspace/: actor.rs  audit.rs  cache.rs  cache_seal.rs  collaboration.rs  collaboration_commands.rs  commands.rs  documents.rs  enrollment.rs  guard.rs  identity.rs  lock.rs  mailbox.rs  mod.rs  mode.rs  oauth.rs  presence.rs  team.rs  team_connection.rs
src-tauri/src/workspace/migration/: download.rs  mod.rs  plan.rs  sync_key.rs  upload.rs
src-tauri/src/workspace/sharepoint/: client.rs  conflict.rs  mod.rs  schema.rs  test_server.rs  urls.rs
src-tauri/src/workspace/sync/: blob.rs  commands.rs  mod.rs  multinode_tests.rs  pull.rs  push.rs  rebuild.rs  sequence.rs
src-tauri/tests/: tauri_security_config.rs
(+1665 files in other folders)
