[package]
name = "patrimoine-crm"
version = "0.2.0"
description = "CRM Desktop pour Conseillers en Gestion de Patrimoine"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
# TEMPORAIRE : SQLCipher désactivé - nécessite OpenSSL sur Windows
# Pour réactiver le chiffrement : remplacer "bundled" par "bundled-sqlcipher" après installation OpenSSL
anyhow = "1.0"
argon2 = "0.5"
rand = "0.8"
chrono = "0.4"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
hex = "0.4"
lettre = "0.11"
base64 = "0.21"
tauri-plugin-process = "2"
oauth2 = { version = "4.4", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"

[profile.dev]
# debug = 0 évite LNK1318 ; codegen-units = 1 limite le pic RAM au link (Windows)
incremental = true
debug = 0
codegen-units = 1

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
