[package]
name = "patrimoine-crm"
version = "0.4.87"
description = "CRM Desktop pour Conseillers en Gestion de Patrimoine"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup", "hooks"] }
# SQLite simple (non chiffre) compile depuis les sources (bundled).
# Aucune dependance OpenSSL ni outil de build (NASM/Perl) requis.
anyhow = "1.0"
argon2 = "0.5"
rand = "0.8"
chrono = "0.4"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
base64 = "0.21"
tauri-plugin-process = "2"
oauth2 = { version = "4.4", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
url = "2"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
hmac = "0.12"
sha2 = "0.10"
ico = "0.4"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-biometry = "0.2.8"
chacha20poly1305 = "0.11.0"
atomic-write-file = "0.3.0"
open = { version = "5.4.0", features = ["shellexecute-on-windows"] }

[profile.dev]
# debug = 0 évite LNK1318 ; plusieurs unités réduisent le pic mémoire LLVM sous Windows.
incremental = true
debug = 0
codegen-units = 16

[profile.test]
incremental = true
debug = 0
codegen-units = 16

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.8"
windows-dpapi = "0.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"
